feat: 更新環境變數設定，新增範例檔案並清理.gitignore

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-CF_API_TOKEN=XACCEHADYv5IqwZGVKCNKBgDJy-123W8iK-XyDOx
+CF_API_TOKEN=你真正的token
+CF_ACCOUNT_ID=xxxx
+CF_ZONE_ID=xxxx
+NODE_ENV=production
