feat: 更新 env.example 檔案，增加 Cloudflare 權限說明及雷達設定選項

--- a/env.example
+++ b/env.example
@@ -1,9 +1,21 @@
-# Cloudflare API Token (READ ONLY)
-CF_API_TOKEN=
+# =====================
+# Cloudflare Read-only Token
+# Required permissions:
+# - Account / Account Analytics / Read
+# - Account / Account Settings / Read
+# - Zone / Analytics / Read
+# - Zone / DNS / Read
+# =====================
 
-# Optional: Cloudflare Account / Zone
+CF_API_TOKEN=
 CF_ACCOUNT_ID=
+
+# Optional (only if script needs specific zone)
 CF_ZONE_ID=
 
-# Project mode
-NODE_ENV=development
+# =====================
+# Radar Settings (optional)
+# =====================
+RADAR_TIMEZONE=Asia/Taipei
+RADAR_DEFAULT_WINDOW_DAYS=7
+RADAR_TOP_SERIES=3
