feat(v0.4): stabilize radar into deterministic, explainable, release-gated instrument
- unify output/config via src/settings.py and env/CLI half-life controls
- normalize snapshot schema with fixed fields + missing/extra markers
- enforce canonical series aliases via config/series_aliases.json
- add event strength explain payload and persist to events_v01
- split chain scoring into base/boosted/delta with src_event explain columns
- add synchronized Domain/Event/Chain dashboard views and L3 filtering
- upgrade eval_quality to strict release gate with non-zero on critical failures
- move artifacts to output/ and clean tracked generated files
- add fixed fixture + run_acceptance_v04.py for deterministic regression

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,14 @@ env/
 dist/
 build/
 out/
-output/
+output/*
+!output/.gitkeep
 coverage/
+radar.db
+dashboard_v01.html
+dashboard_v02.html
+dashboard_v03.html
+dashboard_v04.html
 
 # =========================
 # Logs & runtime
