--- a/env.example
+++ b/env.example
@@ -19,3 +19,5 @@ CF_ZONE_ID=
 RADAR_TIMEZONE=Asia/Taipei
 RADAR_DEFAULT_WINDOW_DAYS=7
 RADAR_TOP_SERIES=3
+RADAR_OUTPUT_DIR=output
+RADAR_EVENT_HALF_LIFE_DAYS=7
