--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,13 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
-      - v0.5-pr4-acceptance
+    branches: [ main ]
   pull_request:
 
 jobs:
   acceptance:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,12 +18,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps (if requirements.txt exists)
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run acceptance v07
+      - name: Run acceptance
         run: |
-          python -m py_compile src/persistence_v1.py scripts/run_acceptance_v07.py render_dashboard_v02.py
           python scripts/run_acceptance_v07.py --skip-v04-hash
+
