--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,7 @@ jobs:
         run: |
           python scripts/run_acceptance_v07.py --skip-v04-hash
 
+      - name: Run acceptance
+        run: |
+          python scripts/run_acceptance_v07.py --skip-v04-hash
+
